hphp/test/zend/bad/ext/reflection/tests/ReflectionObject_export_basic3.php
<?php
class C {
	private $p = 1;
}

class D extends C{
}

$Obj = new D;
$Obj->p = 'value';
ReflectionObject::export($Obj)
?>
